src/objects/Product_Tab__c.object
<CustomObject>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Tabs</relationshipLabel>
        <relationshipName>Product_Tabs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Description</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Product Tab</label>
    <nameField>
        <label>Product Tab Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Tabs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>